# DrChops

./: .travis.yml  CMakeLists.txt  Make.mm  README.md  Ringing.pro  angle_slices.pro  bin_plot.pro  bin_plot_save.pro  color_key.pro  detectorangle.pro  detectorangle_10m.pro  e_rebin.pro  e_rebin06.pro  e_rebin06_10m.pro  ef_efficiency.pro  ei_to_t.pro  find_tbkg.pro  findphi_10m.pro  fit_energy.pro  idl_red_steps_yokoo.txt  idl_startup  image_10m.pro  legend.pro  oplterr.pro  ph_plot.pro  pharos.com  plate_abs.pro  plterr.pro  pltsum.pro  q_interp.pro  quick_rebin.pro  quick_rebin06.pro  quick_rebin06_10m.pro  read_data.pro  read_data_r.pro  read_data_small.pro  read_fix_data.pro  read_ldaq_data_r.pro  read_ldaq_r_1.pro  read_zipdata.pro  (+19 more)
arcseventdata/: Make.mm
drchops/: Make.mm  __init__.py
histogrammode/: Make.mm  README.changewebserver  REPOHISTORY
lib/: CMakeLists.txt  Event2QE.h  Event2QE.icc  Functor.h  Histogrammer.h  Ipix2Ixy.cc  Ipix2Ixy.h  Ipix2Ixy.icc  IpixE2IphiE.cc  IpixE2IphiE.h  IpixE2IphiE.icc  Itof2IE.h  Itof2IE_batch.cc  Itof2IE_batch.h  Itof2IE_batch.icc  Make.mm  README.devel  ReverseIterator.h  Universal1DRebinner.cc  Universal1DRebinner.icc  Zt2Zxy.cc  Zt2Zxy.h  Zt2Zxy.icc  _macros.h  events2iqe.h  exception.h  findCellIndex.h  local.def  physics.cc  physics.h  readPixelPositions.cc  readPixelPositions.h  solidangle_qe.h  solidangle_qe.icc  tof2E.h
module/: IpixE2IphiE_bdgs.cc  Itof2IE_batch_bdgs.cc  Make.mm  Zt2Zxy_bdgs.h  bindings.cc  bindings.h  exceptions.cc  exceptions.h  local.def  misc.h
pyext/: CMakeLists.txt  IpixE2IphiE_bdgs.h  (+12 more)
(+1242 files in other folders)
